# Gemini-Voice-Splitter

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  requirements.txt  todo.md  voice_trainer.py
voice_trainer_app/: __init__.py
voice_trainer_app/audio/: __init__.py  processing.py
voice_trainer_app/characters/: manager.py
voice_trainer_app/cli/: __init__.py  commands.py
voice_trainer_app/core/: __init__.py  trainer.py
voice_trainer_app/gemini/: __init__.py  analyzer.py
voice_trainer_app/utils/: __init__.py  helpers.py
